// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-alert component should render an action in the correct position when supplied 1`] = `
<ic-alert class="dark" message="This has an action" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <slot name="message">
            <ic-typography variant="body">
              This has an action
            </ic-typography>
          </slot>
        </div>
        <div class="alert-action-container">
          <slot name="action"></slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
  <button slot="action"></button>
</ic-alert>
`;

exports[`ic-alert component should render an element in the message slot 1`] = `
<ic-alert class="dark" heading="Using custom message" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <ic-typography class="alert-title" variant="subtitle-large">
            <p>
              Using custom message
            </p>
          </ic-typography>
          <slot name="message">
            <ic-typography variant="body"></ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
  <ic-typography slot="message" variant="h1">
    Custom h1 message
  </ic-typography>
</ic-alert>
`;

exports[`ic-alert component should render an icon in the neutral-icon slot 1`] = `
<ic-alert class="dark" heading="Using custom icon" message="This has a slotted icon" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <div class="alert-icon icon-neutral svg-container">
          <slot name="neutral-icon"></slot>
        </div>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <ic-typography class="alert-title" variant="subtitle-large">
            <p>
              Using custom icon
            </p>
          </ic-typography>
          <slot name="message">
            <ic-typography variant="body">
              This has a slotted icon
            </ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
  <svg fill="#000000" height="24px" slot="neutral-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
  </svg>
</ic-alert>
`;

exports[`ic-alert component should render default icon of success variant when the show-default-icon prop is set to false 1`] = `
<ic-alert class="dark" heading="Success" message="This alert has the default success icon" role="alert" show-default-icon="false" variant="success">
  <template shadowrootmode="open">
    <div class="container container-success">
      <div class="alert-icon-container">
        <div class="divider divider-success"></div>
        <span class="alert-icon icon-success svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <ic-typography class="alert-title" variant="subtitle-large">
            <p>
              Success
            </p>
          </ic-typography>
          <slot name="message">
            <ic-typography variant="body">
              This alert has the default success icon
            </ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
</ic-alert>
`;

exports[`ic-alert component should render with a dismiss icon when the prop is applied 1`] = `
<ic-alert class="dark" dismissible="true" message="This is dismissible" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <slot name="message">
            <ic-typography variant="body">
              This is dismissible
            </ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container">
        <ic-button class="dismiss-icon svg-container" theme="dark" title="Dismiss" variant="icon">
          svg
        </ic-button>
      </div>
    </div>
  </template>
</ic-alert>
`;

exports[`ic-alert component should render with a heading when supplied 1`] = `
<ic-alert class="dark" heading="Test heading" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <ic-typography class="alert-title" variant="subtitle-large">
            <p>
              Test heading
            </p>
          </ic-typography>
          <slot name="message">
            <ic-typography variant="body"></ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
</ic-alert>
`;

exports[`ic-alert component should render with a message when supplied 1`] = `
<ic-alert class="dark" message="Test message" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <slot name="message">
            <ic-typography variant="body">
              Test message
            </ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
</ic-alert>
`;

exports[`ic-alert component should render with no icon when the show-default-icon prop is set to false 1`] = `
<ic-alert class="dark" heading="No icon" message="This alert has no icon" role="alert" show-defaul-icon="false">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <ic-typography class="alert-title" variant="subtitle-large">
            <p>
              No icon
            </p>
          </ic-typography>
          <slot name="message">
            <ic-typography variant="body">
              This alert has no icon
            </ic-typography>
          </slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
</ic-alert>
`;

exports[`ic-alert component should test rendering an action after initial render 1`] = `
<ic-alert class="dark" heading="Test heading" role="alert">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <ic-typography class="alert-title" variant="subtitle-large">
            <p>
              Test heading
            </p>
          </ic-typography>
          <slot name="message">
            <ic-typography variant="body"></ic-typography>
          </slot>
        </div>
        <div class="alert-action-container">
          <slot name="action"></slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
  <button slot="action"></button>
</ic-alert>
`;
